--- a/404.html
+++ b/404.html
@@ -210,8 +210,9 @@
     </header>
     <div class="loading" id="loading">Loading&#8230;</div>
     <center>
-        <p style="height: 40vh;"></p>
-        <h1>NOT Found</h1>
+        <p style="height: 30vh;"></p>
+        <h1 style="background-color: transparent; font-size: 50px;">NOT FOUND</h1>
+        <p>The link you followed does not exist.</p>
         <a href="./" style="color: orange;">Click Here to Navigate to Home Screen</a>
     </center>
     
