--- a/register.html
+++ b/register.html
@@ -488,6 +488,9 @@
             document.getElementById("header-logo").hidden = true;
         document.querySelector(".menu-link").classList.remove("active");
         document.querySelector(".main-nav").classList.remove("active");
+            document.querySelector(".main-nav").style.overflow = 'scroll';
+            document.querySelector(".main-nav").style.height = 'inherit';
+            document.querySelector(".main-nav").style.minHeight = '90vh';
         document.querySelector(".main-menu").hidden = true;
         document.querySelector(".fa").addEventListener("click", function () {
             if(document.querySelector(".menu-link").classList.value.includes("active")){
