--- a/login-varify.html
+++ b/login-varify.html
@@ -57,7 +57,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-
+            height: 100vh;
             padding: 0;
             display: flex;
             justify-content: center;
@@ -69,7 +69,7 @@
             backdrop-filter: blur(16px);
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             width: 300px;
-            margin-top: -200px;
+            margin-top: 150px;
             padding: 20px;
             text-align: center;
         }
@@ -180,6 +180,10 @@
 <script>
     if (localStorage.getItem("name") == null || localStorage.getItem("email") == null || localStorage.getItem("email") == 'null' || localStorage.getItem("name") == 'null' || localStorage.getItem("email") == '' || localStorage.getItem("name") == '') {
         console.log("not signed in")
+        if(localStorage.getItem("email1") == null || localStorage.getItem("email1") == 'null' || localStorage.getItem("email1") == 'undefined' || localStorage.getItem("email1") == undefined){
+            let url = "./login.html";
+            window.location.href = url;
+        }
     }
     else {
         let url = "./my-profile.html";
