--- a/login-varify.html
+++ b/login-varify.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register | 365Connect Community</title>
+    <title>Sign-In | 365Connect Community</title>
     <link rel="stylesheet" href="styles.css">
 
     <script src="vendor/jquery/jquery.min.js"></script>
