--- a/login-varify.html
+++ b/login-varify.html
@@ -159,7 +159,7 @@
         <div id="login-container"></div>
 
         <input class="in-put" type="text" placeholder="Varification Code" id="code">
-        <p id="resendtext">Didn't revieve an email? <a id="resend">Resend</a> </p>
+        <p id="resendtext">Didn't revieve an email? Check spam or <a id="resend">Resend</a> </p>
         <button class="bntn" onclick="submit()">Continue</button>
         <div class="message" id="message">
         </div>
