--- a/events.html
+++ b/events.html
@@ -493,8 +493,8 @@ document.getElementById("event-search").addEventListener("input", filterPastEven
         document.querySelector(".menu-link").classList.remove("active");
         document.querySelector(".main-nav").classList.remove("active");
             document.querySelector(".main-nav").style.overflow = 'scroll';
-            document.querySelector(".main-nav").style.height = 'inherit';
-            document.querySelector(".main-nav").style.minHeight = '90vh';
+            document.querySelector(".main-nav").style.height = '60vh';
+            document.querySelector(".main-nav").style.minHeight = '60vh';
         document.querySelector(".main-menu").hidden = true;
         document.querySelector(".fa").addEventListener("click", function () {
             if(document.querySelector(".menu-link").classList.value.includes("active")){
