--- a/login-varify.html
+++ b/login-varify.html
@@ -382,7 +382,27 @@
                 .catch(error => console.log('error', error));
 
         })
-
+        if (screen.height > screen.width){
+        document.getElementById("header-logo").hidden = true;
+        document.querySelector(".menu-link").classList.remove("active");
+        document.querySelector(".main-nav").classList.remove("active");
+            document.querySelector(".main-nav").style.overflow = 'scroll';
+            document.querySelector(".main-nav").style.height = '60vh';
+            document.querySelector(".main-nav").style.minHeight = '60vh';
+        document.querySelector(".main-menu").hidden = true;
+        // document.querySelector(".fa").addEventListener("click", function () {
+        //     if(document.querySelector(".menu-link").classList.value.includes("active")){
+        //         document.querySelector(".menu-link").classList.remove("active");
+        //         document.querySelector(".main-nav").classList.remove("active");
+        //         document.querySelector(".main-menu").hidden = false;
+        //     }
+        //     else{
+        //     document.querySelector(".menu-link").classList.add("active");
+        //     document.querySelector(".main-nav").classList.add("active");
+        //     document.querySelector(".main-menu").hidden = true;
+        //     }
+        // })
+    }
 </script>
 
 </html>
