--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -251,7 +251,7 @@ https://templatemo.com/tm-557-grad-school
 
       data.forEach(item => {
         // Check if the item type is "file" and skip it
-        if (item.type === 'file') {
+        if (item.type === 'file' && item.name != "assets") {
           return;
         }
 
