--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -275,6 +275,7 @@ https://templatemo.com/tm-557-grad-school
         // Create card title
         const cardTitle = document.createElement('h5');
         cardTitle.className = 'card-title';
+        cardTitle.style.marginBottom = "50px";
         cardTitle.textContent = item.name;
 
         // Create card text
