--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -49,9 +49,47 @@ https://templatemo.com/tm-557-grad-school
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
 }
+.modal-content {
+    color: black;
+  }
+
+  /* Set max-width for images within the modal */
+  .modal-content img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  /* Set max-height and enable vertical scrolling for modal body */
+  .modal-body {
+    max-height: 70vh; /* Adjust the maximum height as needed */
+    overflow-y: auto;
+  }.modal-content p {
+    color: black !important;
+  }
 </style>
 
 <body>
+  <!-- Modal -->
+<div class="modal fade" id="repoModal" tabindex="-1" aria-labelledby="repoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="repoModalLabel">Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="readmeContent"></div>
+      </div>
+      <div class="modal-footer">
+        <a id="visitRepoLink" class="btn btn-primary" href="#" target="_blank">Visit Repository</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!---->
   <h1 style="display: none;">365Connect Community</h1>
 
   <div class="loading" id="loading">Loading&#8230;</div>
@@ -171,6 +209,10 @@ https://templatemo.com/tm-557-grad-school
   <script src="assets/js/video.js"></script>
   <script src="assets/js/slick-slider.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="assets/js/isotope.min.js"></script>
   <script>
     const email = localStorage.getItem("email");
     const fullname = localStorage.getItem("name");
@@ -240,72 +282,134 @@ https://templatemo.com/tm-557-grad-school
     if (screen.height > screen.width) {
       document.getElementById("header-logo").hidden = true;
     }
-  </script>
-  <script>
+ 
     // JSON response data
 
 
     // Function to generate Bootstrap cards
     function generateCards(data) {
-      const cardContainer = document.getElementById('card-container');
+  const cardContainer = document.getElementById('card-container');
 
-      data.forEach(item => {
-        // Check if the item type is "file" and skip it
-        if (item.type === 'file') {
-          return;
-        }
-
-        // Create a Bootstrap column div
-        const columnDiv = document.createElement('div');
-        columnDiv.className = 'col-sm-6';
-
-        // Create a Bootstrap card element
-        const card = document.createElement('div');
-        
-        card.style.marginTop = '20px';
-        card.style.backgroundColor = "#202124";
-        card.style.color = "white";
-        card.className = 'card';
-
-        // Create card body
-        const cardBody = document.createElement('div');
-        cardBody.className = 'card-body';
-        cardBody.style.marginBottom = '20px';
-
-        // Create card title
-        const cardTitle = document.createElement('h5');
-        cardTitle.className = 'card-title';
-        cardTitle.style.marginBottom = "50px";
-        cardTitle.textContent = item.name;
-
-        // Create card text
-        const cardText = document.createElement('p');
-        cardText.className = 'card-text';
-        cardText.textContent = item.description;
-
-        // Create card link
-        const cardLink = document.createElement('a');
-        cardLink.href = item.html_url;
-        cardLink.textContent = 'Go to Repository';
-        cardLink.className = 'btn btn-primary';
-        cardLink.style.backgroundColor = "orange";
-        cardLink.style.borderColor = "orange";
-
-        // Append card title, text, and link to card body
-        cardBody.appendChild(cardTitle);
-        cardBody.appendChild(cardText);
-        cardBody.appendChild(cardLink);
-
-        // Append card body to card
-        card.appendChild(cardBody);
-
-        // Append card to column
-        columnDiv.appendChild(card);
-
-        // Append column to card container
-        cardContainer.appendChild(columnDiv);
-      });
+  data.forEach(item => {
+    // Check if the item type is "file" and skip it
+    if (item.type === 'file') {
+      return;
     }
+
+    // Create a Bootstrap column div
+    const columnDiv = document.createElement('div');
+    columnDiv.className = 'col-sm-6';
+
+    // Create a Bootstrap card element
+    const card = document.createElement('div');
+    card.style.marginTop = '20px';
+    card.style.backgroundColor = "#202124";
+    card.style.color = "white";
+    card.className = 'card';
+
+    // Create card body
+    const cardBody = document.createElement('div');
+    cardBody.className = 'card-body';
+    cardBody.style.marginBottom = '20px';
+
+    // Create card title
+    const cardTitle = document.createElement('h5');
+    cardTitle.className = 'card-title';
+    cardTitle.style.marginBottom = "50px";
+    cardTitle.textContent = item.name;
+
+    // Create card text
+    const cardText = document.createElement('p');
+    cardText.className = 'card-text';
+    cardText.textContent = item.description;
+
+    // Create card link (button)
+    const cardLink = document.createElement('button');
+    cardLink.type = 'button';
+    cardLink.textContent = 'View Details';
+    cardLink.className = 'btn btn-primary';
+    cardLink.style.backgroundColor = "orange";
+    cardLink.style.borderColor = "orange";
+
+    // Attach an event listener to the button to load readme content and open the modal
+    cardLink.addEventListener('click', () => {
+      loadReadmeContent(item.name, item.html_url);
+    });
+
+    // Append card title, text, and link to card body
+    cardBody.appendChild(cardTitle);
+    cardBody.appendChild(cardText);
+    cardBody.appendChild(cardLink);
+
+    // Append card body to card
+    card.appendChild(cardBody);
+
+    // Append column to card container
+    columnDiv.appendChild(card);
+
+    // Append column to card container
+    cardContainer.appendChild(columnDiv);
+  });
+}
+var closeButtonHeader = document.querySelector(".modal-header .close");
+  var closeButtonFooter = document.querySelector(".modal-footer button.btn-secondary");
+
+  // Function to close the modal
+  function closeModal() {
+    // Find the modal dialog element and close it
+    var modalDialog = document.querySelector(".modal.fade");
+    modalDialog.style.display = "none";
+  }
+
+  // Add click event listeners to both close buttons
+  closeButtonHeader.addEventListener("click", closeModal);
+  closeButtonFooter.addEventListener("click", closeModal);
+
+// Function to load and render the README content
+function loadReadmeContent(repoName, repoUrl) {
+  const readmeContentContainer = document.getElementById('readmeContent');
+  const visitRepoLink = document.getElementById('visitRepoLink');
+  const modal = document.getElementById('repoModal');
+
+  // Fetch the readme.md content from the repository
+  fetch(`https://api.github.com/repos/365ConnectCommunity/sample-solutions/contents/${repoName}/README.md`)
+    .then(response => {
+      if (response.status === 404) {
+        throw new Error('Readme file not found.');
+      }
+      if (!response.ok) {
+        throw new Error('Failed to fetch readme content.');
+      }
+      return response.json();
+    })
+    .then(data => {
+      if (data.content) {
+        const readmeContent = atob(data.content); // Decode Base64 content
+        // Convert markdown content to HTML (you'll need a library for this step)
+        const markdownConverter = new showdown.Converter(); // Assuming you use Showdown library for markdown conversion
+        const htmlContent = markdownConverter.makeHtml(readmeContent);
+
+        readmeContentContainer.innerHTML = htmlContent;
+        visitRepoLink.href = repoUrl;
+        modal.classList.add('show'); // Show the modal by adding the 'show' class
+        modal.style.display = 'block'; // Make sure the modal is displayed
+        modal.setAttribute('aria-hidden', 'false'); // Set aria-hidden attribute to 'false'
+      } else {
+        throw new Error('Readme content is empty.');
+      }
+    })
+    .catch(error => {
+      console.error('Error loading readme content:', error);
+      readmeContentContainer.innerHTML = '<p>Error loading readme content.</p>';
+      visitRepoLink.href = repoUrl;
+      modal.classList.add('show'); // Show the modal even on error
+      modal.style.display = 'block';
+      modal.setAttribute('aria-hidden', 'false');
+    });
+}
+
+
+
 
     // Call the function to generate cards using the JSON data
     var requestOptions = {
