--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -160,7 +160,7 @@ https://templatemo.com/tm-557-grad-school
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading" style="margin-bottom: 0px !important;">
-              <h2>All Solutions</h2><br><br>
+              <h2>Power Apps Solutions</h2><br><br>
               <center>
                 <div style="width: 60%;">
                   <input type="text" id="searchInput" class="form-control" placeholder="Search solutions..." onkeyup="filterCards()">
