--- a/login-varify.html
+++ b/login-varify.html
@@ -159,7 +159,7 @@
         <a href="" target="_b" class="author1" style="box-shadow:  rgba(0, 0, 0, 0.35) 0px 5px 15px !important;"></a>
         <div id="login-container"></div>
 
-        <input class="in-put" type="text" placeholder="Varification Code" id="code">
+        <input class="in-put" type="password" placeholder="Varification Code" id="code">
         <p id="resendtext">Didn't revieve an email? Check spam or <a id="resend">Resend</a> </p>
         <button class="bntn" onclick="submit()">Continue</button>
         <div class="message" id="message">
