--- a/index.html
+++ b/index.html
@@ -837,6 +837,9 @@ https://templatemo.com/tm-557-grad-school
     if (screen.height > screen.width) {
       document.getElementById("myprofilepic").hidden = true;
     }
+    if (localStorage.getItem("image") == '' || localStorage.getItem("image") == null || localStorage.getItem("image") == 'null' || localStorage.getItem("image") == 'undefined') {
+          document.getElementById("myprofilepic").src = "https://static.vecteezy.com/system/resources/thumbnails/005/545/335/small/user-sign-icon-person-symbol-human-avatar-isolated-on-white-backogrund-vector.jpg";
+    }
   </script>
 </body>
 
