--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -50,7 +50,7 @@ https://templatemo.com/tm-557-grad-school
   font-size: 30px;
 }
 .card-title1 {
-  background: url(https://picstatio.com/large/nqhjvv/web-development-minimal-wallpaper.png);
+  background: url(https://dynamics365blocks.files.wordpress.com/2018/09/splash.jpg);
     background-size: cover;
     height: 170px;
     display: flex;
