--- a/become-contributor.html
+++ b/become-contributor.html
@@ -49,7 +49,7 @@
             margin-top: 5%;
             margin-bottom: 15%;
             padding: 20px;
-            background-color: transparent;
+            background-color: #202124;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
@@ -301,12 +301,12 @@
                 <span class="step-number">2.</span>
                 <span class="step-description">Submit a Sample Solution:</span>
                 <div class="content-text">
-                    <p class="content-text" style="margin-left: 40px;margin-top: 10px;">Contribute to our GitHub repository with sample solutions or improvements. Here's how:</p>
+                    <p class="content-text" style="margin-left: 40px;margin-top: 10px;">Contribute to our GitHub repository with sample solutions or improvements.</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
-                        <li style="margin-top: 10px;">Fork our Sample Solutions <a href="https://github.com/365ConnectCommunity/sample-solutions" target="_blank">GitHub repository</a>.</li>
-                        <li style="margin-top: 10px;">Create a new branch for your changes.</li>
+                        <li style="margin-top: 10px;">View Detailed Steps here: <a href="https://github.com/365ConnectCommunity/sample-solutions/wiki/How-to-submit-a-Power-App-sample" target="_blank">How to Submit a Sample</a>.</li>
+                        <!-- <li style="margin-top: 10px;">Create a new branch for your changes.</li>
                         <li style="margin-top: 10px;">Add your sample solution or make improvements.</li>
-                        <li style="margin-top: 10px;">Submit a pull request to merge your changes into our repository.</li>
+                        <li style="margin-top: 10px;">Submit a pull request to merge your changes into our repository.</li> -->
                     </ol>
                 </div>
             </div>
