--- a/our-socials.html
+++ b/our-socials.html
@@ -51,7 +51,7 @@
             margin-top: 5%;
             margin-bottom: 15%;
             padding: 20px;
-            background-color: transparent;
+            background-color: #202124;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
