--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -571,6 +571,9 @@ https://templatemo.com/tm-557-grad-school
     // Initial display of cards and pagination buttons
     displayCurrentPage();
     updatePaginationButtons();
+    if (localStorage.getItem("image") == '' || localStorage.getItem("image") == null || localStorage.getItem("image") == 'null' || localStorage.getItem("image") == 'undefined') {
+      document.getElementById("myprofilepic").src = './assets/images/icons8-account-64.png';
+    }
 
   </script>
 
