--- a/signup.html
+++ b/signup.html
@@ -343,6 +343,9 @@ https://templatemo.com/tm-557-grad-school
     if (screen.height > screen.width) {
       document.getElementById("myprofilepic").hidden = true;
     }
+    if (localStorage.getItem("image") == '' || localStorage.getItem("image") == null || localStorage.getItem("image") == 'null' || localStorage.getItem("image") == 'undefined') {
+      document.getElementById("myprofilepic").src = './assets/images/icons8-account-64.png';
+    }
   </script>
 </body>
 
