--- a/sample-soltutions.html
+++ b/sample-soltutions.html
@@ -164,6 +164,9 @@ https://templatemo.com/tm-557-grad-school
                 <div class="days" style="width:100%;">
                   <div class="value">Sample Solutions</div>
                   <span>365Connect Community</span>
+                  <div class="main-button" style="margin-top: 20px;">
+                    <div class="scroll-to-section"><a href="https://github.com/365ConnectCommunity/sample-solutions/wiki/How-to-submit-a-Power-App-sample">Submit a Sample Solution</a></div>
+                  </div>
 
 
                 </div>
